--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $main-color: #fff;
 $green-color: #539713;
 $light-blue: #7FAAF0;
 $error-color: #FF0000FF;
+$disabled: #c1d4a7;
 
 
 $container-width: 1320px;
